--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "node-dir": "^0.1.17",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-player": "^1.6.4",
