--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "^4.16.3",
     "node-dir": "^0.1.17",
     "react": "^16.5.1",
+    "react-burger-menu": "^2.5.2",
     "react-dom": "^16.5.1",
     "react-player": "^1.6.4",
     "react-scripts": "1.1.5"
