--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    volumes:
+      - /home/livingroom/capacious/Movies:/app/movies
+      - .env:/app/.env
     ports:
       - "10000:10000"
