--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 
-REACT_APP_API_PORT=10000
-REACT_APP_API_URL="http://10.0.0.139"
+REACT_APP_API_PORT=80
+REACT_APP_API_INTERNAL_PORT=10000
+REACT_APP_API_URL="http://soot.cloud"
 REACT_APP_MOVIE_DIR="movies"
